[package]
name = "mcp-server-post-x"
version = "0.1.0"
edition = "2024"
description = "MCP server for posting to X (Twitter)"

[[bin]]
name = "post-x"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
toml = "0.8"
anyhow = "1"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
